--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,14 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:design:24.1.1'
     //android-apt plugin
     apply plugin: 'com.neenbedankt.android-apt'
     //dagger plugin
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.google.dagger:dagger:2.0.2'
     //json plugin for retrofit
     compile 'com.google.code.gson:gson:2.6.2'
@@ -52,4 +52,6 @@ dependencies {
     compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
 
     compile 'com.google.zxing:core:3.0.1'
+    //For increament/decrement buttons
+    //compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
 }
