--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.objectedge.payzoop">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".OCCApplication"
@@ -11,15 +12,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light">
-        <activity android:name=".activity.ProductListingActivity"
+        <activity
+            android:name=".activity.ProductListingActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".activity.PDPActivity"
+        <activity
+            android:name=".activity.PDPActivity"
             android:parentActivityName=".activity.ProductListingActivity"
             android:screenOrientation="portrait">
             <meta-data
@@ -29,7 +28,15 @@
         <activity
             android:name=".activity.CartActivity"
             android:label="@string/title_activity_cart" />
+        <activity android:name=".activity.Splash"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
-    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
