--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,14 +44,12 @@ dependencies {
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.android.support:cardview-v7:24.0.+'
     compile files('lib/YouTubeAndroidPlayerApi.jar')
-
     compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
-
     compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
-
     compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
-
     compile 'com.google.zxing:core:3.0.1'
     //For increament/decrement buttons
     //compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    compile files('libs/PGSDK_v1.0.1.jar')
+    compile files('libs/android-support-v4.jar')
 }
