--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".OCCApplication"
         android:allowBackup="true"
@@ -14,9 +15,7 @@
         android:theme="@style/Theme.AppCompat.Light">
         <activity
             android:name=".activity.ProductListingActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.PDPActivity"
             android:parentActivityName=".activity.ProductListingActivity"
@@ -28,7 +27,8 @@
         <activity
             android:name=".activity.CartActivity"
             android:label="@string/title_activity_cart" />
-        <activity android:name=".activity.Splash"
+        <activity
+            android:name=".activity.Splash"
             android:noHistory="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -39,8 +39,10 @@
         </activity>
         <activity
             android:name="com.paytm.pgsdk.PaytmPGActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|keyboard"/>
+            android:configChanges="keyboardHidden|orientation|keyboard"
+            android:screenOrientation="portrait" />
+        <activity android:name=".activity.ScannerActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
