--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.objectedge.payzoop"
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion 12
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -22,14 +22,14 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:design:23.1.1'
     //android-apt plugin
     apply plugin: 'com.neenbedankt.android-apt'
     //dagger plugin
     apt 'com.google.dagger:dagger-compiler:2.0.2'
     provided 'org.glassfish:javax.annotation:10.0-b28'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.dagger:dagger:2.0.2'
     //json plugin for retrofit
     compile 'com.google.code.gson:gson:2.6.2'
@@ -42,14 +42,11 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     //Event bus
     compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.android.support:cardview-v7:24.0.+'
-    compile files('lib/YouTubeAndroidPlayerApi.jar')
-    compile 'com.journeyapps:zxing-android-embedded:2.0.1@aar'
-    compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
-    compile 'com.journeyapps:zxing-android-integration:2.0.1@aar'
-    compile 'com.google.zxing:core:3.0.1'
+    compile 'com.android.support:cardview-v7:23.0.+'
     //For increament/decrement buttons
     //compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
     compile files('libs/PGSDK_v1.0.1.jar')
     compile files('libs/android-support-v4.jar')
+    //For QRCode
+    compile 'me.dm7.barcodescanner:zxing:1.8.4'
 }
